<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    tools:context=".UserEditActivity">

    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/userNameTextView"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/userNameEditTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/userNameTextView"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/userLastNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/userLastNameTextView"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/userLastNameEditTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/userLastNameTextView"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/phoneTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phoneTextView"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/phoneEditTextPhoneMask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:textSize="20sp" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saveBtn"
        android:textSize="20sp" />
</LinearLayout>