<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddUserActivity">

    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/userNameTextView"
        android:textSize="18sp" />

    <!--        android:text="@string/userNameTextView"-->
    <EditText
        android:id="@+id/userNameEditTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/userNameTextView"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/userLastNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/userLastNameTextView"
        android:textSize="18sp" />

    <!--        android:text="@string/userLastNameTextView"-->
    <EditText
        android:id="@+id/userLastNameEditTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/userLastNameTextView"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/phoneTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phoneTextView"
        android:textSize="18sp" />

    <!--        android:text="@string/phoneTextView"-->
    <!--        android:mask="##########"-->
    <!--    android:digits="12" можно вводить только цифры 1 и 2-->
<!--    <EditText
        android:id="@+id/phoneEditTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="12"
        android:ems="10"
        android:hint="@string/phoneTextView"
        android:inputType="phone"
        android:textSize="20sp" />-->

    <!--    EditText для ввода номера телефона по маске от ru.tinkoff.decoro:decoro:1.5.0-->
    <EditText
        android:id="@+id/phoneEditTextPhoneMask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:textSize="20sp" />

    <Button
        android:id="@+id/addBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addBtn"
        android:textSize="20sp" />

</LinearLayout>

    <!--    android:label="@string/app_name_add_user"--><!--это здесь не работает(штука для создания заголовка окна)-->

